Before changes to boss and monster